--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,7 @@
     {{ encore_entry_script_tags('app') }}
   </head>
   <main id="swup">
-    <body {{ stimulus_controller('symfony/ux-swup/swup', { animateHistoryBrowsing: true, theme: 'slide', } ) }}> {% block body %}{% endblock %}
-
+    <body {# {{ stimulus_controller('symfony/ux-swup/swup', { animateHistoryBrowsing: true, theme: 'slide', } ) }} #}> {% block body %}{% endblock %}
       </body>
     </main>
   </html>
